crates/bc-cli/tests/cli/snapshots/cli__meta__a_key_the_registry_never_saw_cannot_be_renamed.snap
---
source: crates/bc-cli/tests/cli/meta.rs
expression: output
---
success: false
exit_code: 2
----- stdout -----
----- stderr -----
error: not found: metadata key 'invoice'
