crates/bc-cli/tests/cli/snapshots/cli__meta__a_rename_carrying_two_entries_says_entries.snap
---
source: crates/bc-cli/tests/cli/meta.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Renamed 'invoice' to 'bill' (2 entries carried)
----- stderr -----
