crates/bc-cli/tests/cli/snapshots/cli__meta__an_invalid_key_is_rejected_before_the_registry_is_touched.snap
---
source: crates/bc-cli/tests/cli/meta.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: invalid metadata key '1bill': metadata key must start with a letter, found '1'
