crates/bc-cli/tests/cli/snapshots/cli__meta__deleting_a_key_in_use_refuses_and_names_the_force_flag.snap
---
source: crates/bc-cli/tests/cli/meta.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: cannot delete metadata key 'invoice': it has 1 transaction entry and 0 posting entries
       pass --force to delete the key and its entries
