crates/bc-cli/tests/cli/snapshots/cli__meta__list_usage_counts_a_written_key.snap
---
source: crates/bc-cli/tests/cli/meta.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
 KEY | TYPE | REGISTERED | TX | POST | FLAGGED
=
 invoice | number | [TIMESTAMP] | 1 | 0 | 0
----- stderr -----
