crates/bc-cli/tests/cli/snapshots/cli__meta__list_usage_on_an_empty_registry_says_so.snap
---
source: crates/bc-cli/tests/cli/meta.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
No metadata keys.
----- stderr -----
