crates/bc-cli/tests/cli/snapshots/cli__meta__list_without_usage_keeps_its_three_columns.snap
---
source: crates/bc-cli/tests/cli/meta.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
 KEY | TYPE | REGISTERED
=
 invoice | number | [TIMESTAMP]
----- stderr -----
