crates/bc-cli/tests/cli/snapshots/cli__meta__register_declares_a_key_before_any_value_is_written.snap
---
source: crates/bc-cli/tests/cli/meta.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Registered 'owner' as account
----- stderr -----
