crates/bc-cli/tests/cli/snapshots/cli__meta__registering_a_key_with_the_type_it_holds_is_not_a_creation.snap
---
source: crates/bc-cli/tests/cli/meta.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Key 'owner' is already account
----- stderr -----
