crates/bc-cli/tests/cli/snapshots/cli__meta__rename_moves_the_key.snap
---
source: crates/bc-cli/tests/cli/meta.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Renamed 'invoice' to 'bill'
----- stderr -----
